Adds more styles and layout

--- a/src/components/FormField.module.css
+++ b/src/components/FormField.module.css
@@ -1,6 +1,7 @@
 /* FormField.module.css */
 .formField {
-  margin-bottom: var(--spacingVerticalS);
+  margin-bottom: var(--spacingVerticalL);
+  max-width: 320px;
 }
 
 .label {
