--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@ body,
   color: var(--colorNeutralForeground2);
 }
 
+a {
+  color: var(--colorBrandBackground);
+  text-decoration: none;
+}
+
 .sidebar {
   height: 100%;
 }
@@ -173,4 +178,75 @@ fluent-accordion-item.top .nav-item a {
 
 .toolbar-button.close-btn {
   z-index: 1000;
+}
+
+.pet-photo {
+  margin-top: var(--spacingHorizontalXL);
+  margin-bottom: var(--spacingHorizontalL);
+}
+
+.pet-photo fluent-label {
+  margin-bottom: var(--spacingVerticalM);
+}
+
+.upload-container {
+  display: flex;
+  align-items: center;
+}
+
+.pet-photo .icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 64px;
+  height: 64px;
+  margin-right: var(--spacingHorizontalL);
+}
+
+.upload-container fluent-button {
+  margin-bottom: var(--spacingVerticalS);
+}
+
+.fui-Dropdown,
+.fui-Input {
+  width: 100%;
+}
+
+.personality-card {
+  margin-bottom: var(--spacingVerticalXL);
+  width: 250px;
+}
+
+.personality-card .fui-CardHeader {
+  display: block;
+}
+
+.personality-card .fui-CardHeader__header {
+  display: block;
+}
+
+.personality-card .fui-CardHeader__header > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.personality-card .fui-CardHeader__header > div img {
+  width: 24px;
+  height: 24px;
+}
+
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+
+.empty-state fluent-button {
+  width: auto;
+  margin: var(--spacingVerticalL) auto;
 }
