--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,45 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+@font-face {
+  font-family: Segoe UI;
+  src: local("Segoe UI"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2)
+      format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff)
+      format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf)
+      format("truetype");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Segoe UI;
+  src: local("Segoe UI Semibold"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2)
+      format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff)
+      format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf)
+      format("truetype");
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Segoe UI;
+  src: local("Segoe UI Bold"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2)
+      format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff)
+      format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf)
+      format("truetype");
+  font-weight: 900;
+  font-display: swap;
+}
+
 html,
 body,
 #root,
@@ -35,10 +74,12 @@ fabric-teaching-bubble {
   color: #fff;
 }
 
+h3 {
+  margin: var(--spacingVerticalL) 0;
+}
+
 .side-nav h3 {
-  font-size: var(--fontSizeBase600);
   line-height: var(--lineHeightBase600);
-  font-weight: var(--fontWeightMedium);
   margin-left: var(--spacingHorizontalSNudge);
 }
 
@@ -60,7 +101,6 @@ fabric-teaching-bubble {
   position: relative;
 }
 
-h3,
 .nav-item {
   display: flex;
   align-items: center;
@@ -181,8 +221,7 @@ fluent-accordion-item.top .nav-item a {
 }
 
 .pet-photo {
-  margin-top: var(--spacingHorizontalXL);
-  margin-bottom: var(--spacingHorizontalL);
+  margin: var(--spacingHorizontalXL) 0;
 }
 
 .pet-photo fluent-label {
@@ -249,4 +288,10 @@ fluent-accordion-item.top .nav-item a {
 .empty-state fluent-button {
   width: auto;
   margin: var(--spacingVerticalL) auto;
+}
+
+.teaching-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
 }
